--- a/.env
+++ b/.env
@@ -20,32 +20,19 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-# DB_CONNECTION=mysql
-# DB_HOST=31.97.48.106
-# DB_PORT=3306
-# DB_DATABASE=shelter3_dev_cais
-# DB_USERNAME=development
-# DB_PASSWORD=shelterDev456
-
-# DB_CONNECTION_2=mysqlhris
-# DB_HOST_2=31.97.48.106
-# DB_PORT_2=3306
-# DB_DATABASE_2=shelter3_hris_dev
-# DB_USERNAME_2=development
-# DB_PASSWORD_2=shelterDev456
 DB_CONNECTION=mysql
 DB_HOST=31.97.48.106
 DB_PORT=3306
-DB_DATABASE=shelter3_cais
-DB_USERNAME=hris_prod
-DB_PASSWORD=HarisDanCais
+DB_DATABASE=shelter3_dev_cais
+DB_USERNAME=development
+DB_PASSWORD=shelterDev456
 
 DB_CONNECTION_2=mysqlhris
 DB_HOST_2=31.97.48.106
 DB_PORT_2=3306
-DB_DATABASE_2=shelter3_hris
-DB_USERNAME_2=hris_prod
-DB_PASSWORD_2=HarisDanCais
+DB_DATABASE_2=shelter3_hris_dev
+DB_USERNAME_2=development
+DB_PASSWORD_2=shelterDev456
 
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
