--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:hmzl89vr2KNY7PIc8K6cUFiDCGAfyz+BHyfk9XheXTw=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://cais.shelterapp2.co.id
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
