--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,7 +47,7 @@ test:
     paths:
       - vendor/
   rules:
-    - if: $CI_COMMIT_BRANCH == 'develop'
+    - if: $CI_COMMIT_BRANCH == 'development'
     - if: $CI_COMMIT_BRANCH == 'main'
 
 deploy:
@@ -89,7 +89,7 @@ deploy:
         docker image prune -f
       EOF
   rules:
-    - if: $CI_COMMIT_BRANCH == 'develop'
+    - if: $CI_COMMIT_BRANCH == 'development'
   environment:
     name: development
     url: https://api-dev-cais.shelterapp2.co.id
