--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,6 +40,7 @@ test:
     - cp .env.example .env
     - composer install --no-interaction --prefer-dist
   script:
+    - php artisan key:generate
     - php artisan config:clear
     - php artisan test
   cache:
