--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -1,16 +1,16 @@
 services:
-  cais-v2-be-dev:
+  cais-v2-be-prod:
     build:
-      context: /home/data/development/project-cais-backend
-      dockerfile: Dockerfile-dev
+      context: /home/data/beta/project-cais-backend
+      dockerfile: Dockerfile-prod
     init: true
-    container_name: cais-v2-backend-dev
+    container_name: cais-v2-backend-prod
     expose:
       - "9000"
     working_dir: /var/www/laravel
     volumes:
-      - /home/data/development/project-cais-backend/.env:/var/www/laravel/.env:ro
-      - /home/data/development/project-cais-backend/storage:/var/www/laravel/storage
+      - /home/data/beta/project-cais-backend/.env:/var/www/laravel/.env:ro
+      - /home/data/beta/project-cais-backend/storage:/var/www/laravel/storage
     restart: unless-stopped
     deploy:
       resources:
