--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -98,10 +98,10 @@ deploy-dev:
         # Connect storage public for other files if needed (optional)
         ln -sfn ../storage/app/public public/storage
 
-        docker compose -f docker-compose-dev.yml build --no-cache cais-v2-be-dev
+        docker compose -f docker-compose-dev.yml build --no-cache cais-v2-be-dev cais-v2-queue-worker-dev
 
-        echo "Deploying backend..."
-        docker compose -f docker-compose-dev.yml up -d --force-recreate cais-v2-be-dev
+        echo "Deploying backend dan queue worker..."
+        docker compose -f docker-compose-dev.yml up -d --force-recreate cais-v2-be-dev cais-v2-queue-worker-dev
 
         echo "Waiting for backend to be ready..."
         sleep 10
@@ -153,10 +153,10 @@ deploy-prod:
         # Connect storage public for other files if needed (optional)
         ln -sfn ../storage/app/public public/storage
 
-        docker compose -f docker-compose-prod.yml build --no-cache cais-v2-be-prod
+        docker compose -f docker-compose-prod.yml build --no-cache cais-v2-be-prod cais-v2-queue-worker-prod
 
-        echo "Deploying backend..."
-        docker compose -f docker-compose-prod.yml up -d --force-recreate cais-v2-be-prod
+        echo "Deploying backend dan queue worker..."
+        docker compose -f docker-compose-prod.yml up -d --force-recreate cais-v2-be-prod cais-v2-queue-worker-prod
 
         echo "Waiting for backend to be ready..."
         sleep 10
